--- a/style.css
+++ b/style.css
@@ -4,13 +4,11 @@ body {
 }
 /* Nav */
 .nav {
-  position: relative;
+  position: fixed;
   top: 0;
   width: 100%;
   z-index: 10;
-  background-color: rgb(12, 12, 15);
-  background-repeat: no-repeat;
-  background-size: cover;
+  background-color: rgb(36, 36, 37);
   display: flex;
   justify-content: space-between;
 }
@@ -28,6 +26,7 @@ body {
   /* background: #ddd; */
   color: rgb(255, 255, 255);
 }
+
 li {
   display: inline-block;
   padding-left: 10px;
@@ -46,7 +45,21 @@ ul {
 /*Heading*/
 
 .hero {
-  background-image: url("images/bg.jpeg");
+  background: linear-gradient(
+      to bottom,
+      rgba(0, 0, 0, 0.5) 0%,
+      rgba(0, 0, 0, 0.5) 100%
+    ),
+    url(images/bg.jpeg);
+
+  image-rendering: inherit;
+  image-rendering: initial;
+  image-rendering: revert;
+  image-rendering: unset;
+
+  background-position: 50% 50%;
+  image-rendering: crisp-edges;
+  background-color: transparent;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -64,8 +77,8 @@ ul {
   position: absolute;
   justify-content: space-between;
   bottom: 50;
-  left: 50%;
-  padding-bottom: 10;
+  left: 48%;
+  padding-bottom: 2px;
 }
 
 h1 {
@@ -74,7 +87,7 @@ h1 {
   font-size: 25px;
   text-align: center;
   margin-top: 0 auto;
-  text-shadow: 5px 5px 5px rgb(0, 0, 0);
+  text-shadow: 10px 10px 10px rgb(0, 0, 0);
 }
 
 h2 {
@@ -107,7 +120,7 @@ input {
   display: flex;
   margin: 0 auto;
   font-style: italic;
-  background-color: hsl(210, 3%, 16%);
+  background-color: hsl(204, 3%, 34%);
   opacity: 0.5;
   text-align: center;
   color: rgb(255, 255, 255);
@@ -116,26 +129,16 @@ input {
   color: whitesmoke;
   font-display: initial;
 }
-/* .s2 {
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover; 
-  float: left;
-  width: 50%;
-  height: 50%;
-  margin-right: 50px; 
-  height: 100%; 
-  position: relative;
-  display: flex;
-  margin: 0 auto;
-  padding: 8rem 0;
-} */
 .container-s2 {
   border: none;
   padding: 50px 50px 50px;
   max-width: 650%;
   display: flex;
-  background-color: rgb(62, 44, 78);
+  background: linear-gradient(
+    to bottom,
+    rgba(59, 20, 53, 0.5) 0%,
+    rgba(46, 44, 42, 0.5) 100%
+  );
 }
 .container-image {
   width: 40%;
@@ -148,24 +151,15 @@ input {
   display: initial;
 }
 
-/* .s3 {
-  padding: 8rem 0;
-  width: 100%;
-  color: aliceblue;
-  margin: 0 auto;
-  font-family: Georgia, "Times New Roman", Times, serif;
-  background-image: url(images/photo-1566313891923-24df87b1b29f.jpeg);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-} */
-
 .container-s3 {
+  background-image: url(images/photo-1512386233331-f023884a92e8.jpeg);
+  background-color: transparent;
+  background-repeat: no-repeat;
+  background-size: cover;
   border: none;
   padding: 50px 50px 50px;
   max-width: 650%;
   display: flow-root;
-  background-color: rgb(109, 62, 28);
 }
 .container-image2 {
   width: 40%;
@@ -179,6 +173,7 @@ input {
 }
 .container-s4 {
   background-image: url(images/photo-1532153975070-2e9ab71f1b14.jpeg);
+  image-rendering: crisp-edges;
   background-repeat: no-repeat;
   background-size: cover;
   border: none;
@@ -213,13 +208,6 @@ button {
 }
 
 .container-box {
-  transform: rotateX(365deg);
-  transform-origin: initial;
-  transition-duration: 5s;
-  transform-style: preserve-3d;
-  transform-box: unset;
-  transition-timing-function: initial;
-  position: relative;
   width: 50%;
   align-items: center;
 }
@@ -238,6 +226,7 @@ button {
   position: absolute;
   top: 50%;
   left: 50%;
+
   -webkit-transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
@@ -276,3 +265,12 @@ button {
     font-size: 16px;
   }
 }
+/* @media screen and (min-width: 480px) {
+  #nav {
+    width: 200px;
+    float: left;
+  }
+  #hero {
+    margin-left: 216px;
+  }
+} */
