--- a/style.css
+++ b/style.css
@@ -163,7 +163,7 @@ input {
   display: initial;
 }
 .zoom {
-  padding: 50px;
+  padding: 40px;
   transition: transform 0.2s;
   margin: 0 auto;
 }
@@ -190,14 +190,16 @@ input {
   display: inline-block;
   object-fit: contain;
 }
+.s3 {
+  display: initial;
+}
 
 .label {
   font-family: Georgia, "Times New Roman", Times, serif;
-  color: aliceblue;
+  color: rgb(15, 15, 15);
   text-align: center;
   font-size: 16px;
-  border: 5px solid rgb(7, 7, 7);
-  padding: 50px;
+  padding: 5rem;
   margin: 20px;
 }
 button {
@@ -242,7 +244,7 @@ button {
 } */
 
 .image-box {
-  width: 100%;
+  width: 30rem;
   height: auto;
   display: block;
   object-fit: contain;
@@ -254,13 +256,15 @@ button {
   animation-duration: 4s;
   animation-delay: 2s;
   position: relative;
+  display: inline-table;
   width: 100%;
   max-width: 300px;
-  padding: 0 4px;
+  padding: 4 4px;
 }
 .row {
   display: flex;
   flex-wrap: wrap;
+  padding-left: 12rem;
 }
 .text {
   color: aliceblue;
@@ -280,12 +284,13 @@ button {
   background: rgb(0, 0, 0);
   background: rgba(0, 0, 0, 0.5);
   color: #f1f1f1;
-  width: 100%;
+  width: 30rem;
   transition: 0.5s ease;
   opacity: 0;
   color: white;
   font-size: 20px;
-  padding: 20px;
+  padding-top: 3rem;
+  padding-bottom: 5rem;
   text-align: center;
 }
 
